Create a new `AppModal` component
Signed-off-by: Phillip Rak <rak.phillip@gmail.com>

--- a/shell/public/index.html
+++ b/shell/public/index.html
@@ -65,6 +65,7 @@
             <i class="initial-load-spinner"></i>
         </div>
     </div>
+    <div id="modals"><!--Portal content here--></div>
 </body>
 
 </html>
